fix: letter-spacing for mobile

--- a/styles.css
+++ b/styles.css
@@ -402,13 +402,14 @@
   }
 
   main {
-    padding: 0 20px 20px 20px;
+    padding: 20px;
     display: flex;
     justify-content: center;
   }
 
   h1 {
     white-space: nowrap;
+    letter-spacing: 2px;
   }
 
   h4 {
